--- a/index.html
+++ b/index.html
@@ -295,13 +295,14 @@
     <span class="mb-1">
       HuiBook
       &middot;
-      (c) Cool Books
+      (c) <a href="mailto:limh68@mail2.sysu.edu.cn">limh68@mail2.sysu.edu.cn</a>
     </span>
   </div>
   <p class="about text-left mb-0">
     HuiBook
     </a>
-    writed by Li Minghui</a>.
+    writed by 
+    <a href="https://github.com/bdlmh"> Li Minghui</a>.
   </p>
 </footer>
 
