--- a/emma/index.html
+++ b/emma/index.html
@@ -219,6 +219,8 @@
     </a>
     writed by 
     <a href="https://github.com/bdlmh"> Li Minghui</a>.
+    You can also visit
+    <a href="https://bdlmh.github.io/photo/"> my photo site</a>.
   </p>
 </footer>
 
