--- a/pride/index.html
+++ b/pride/index.html
@@ -188,7 +188,7 @@
   <p class="about text-left mb-0">
     HuiBook
     </a>
-    writed by 
+    written by 
     <a href="https://github.com/bdlmh"> Li Minghui</a>.
     You can also visit
     <a href="https://bdlmh.github.io/photo/"> my photo site</a>.
