--- a/gushixinbian/index.html
+++ b/gushixinbian/index.html
@@ -31,6 +31,8 @@
 
   <script src="/js/myFunctions.js"></script>
   <script src="/js/clipboard.min.js"></script>
+  
+  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 </head>
 
   <body class="container" style="max-width: 1024px;">
@@ -131,7 +133,7 @@
     <ul class="list-unstyled">
       
       <li>
-        <a href="https://bdlmh.github.io/gushixinbian/chapter1/">
+        <a href="https://bdlmh.github.io/gushixinbian/chapter1.zh-cn/">
           序言
         </a>
       </li>
@@ -253,6 +255,12 @@
       HuiBook
       &middot;
       (c) <a href="mailto:limh68@mail2.sysu.edu.cn">limh68@mail2.sysu.edu.cn</a>
+    </span>
+    <span id="busuanzi_container_site_pv">
+      <i class="fa fa-spinner"></i>
+      <span id="busuanzi_value_site_pv"></span> Views |
+      <i class="fa fa-user-md"></i>
+      <span id="busuanzi_value_site_uv"></span> Visitors
     </span>
   </div>
   <p class="about text-left mb-0">
