--- a/pride_and_prejudice/index.html
+++ b/pride_and_prejudice/index.html
@@ -237,19 +237,14 @@
       &middot;
       (c) <a href="mailto:limh68@mail2.sysu.edu.cn">limh68@mail2.sysu.edu.cn</a>
     </span>
-    <span id="busuanzi_container_site_pv">
-      <i class="fa fa-spinner"></i>
-      <span id="busuanzi_value_site_pv"></span> Views |
-      <i class="fa fa-user-md"></i>
-      <span id="busuanzi_value_site_uv"></span> Visitors
-    </span>
+    <span id="busuanzi_container_site_pv"><i class="fa fa-spinner"></i><span id="busuanzi_value_site_pv"></span>Views | 
+    <span id="busuanzi_container_site_uv"><i class="fa fa-user-md"></i><span id="busuanzi_value_site_uv"></span>Vistors    
   </div>
   <p class="about text-left mb-0">
-    HuiBook
     </a>
-    written by 
+    By 
     <a href="https://github.com/bdlmh"> Li Minghui</a>.
-    You can also visit
+    Go
     <a href="https://bdlmh.github.io/photo/"> my photo site</a>.
   </p>
 </footer>
