--- a/index.html
+++ b/index.html
@@ -184,6 +184,14 @@
       <ul class="list-unstyled ml-1 mb-0 border-top border-primary pt-2">
         
         <li>
+          <a href="https://bdlmh.github.io/pride/chapter2/">
+            <p class="mb-1">
+              Chapter II
+            </p>
+          </a>
+        </li>
+        
+        <li>
           <a href="https://bdlmh.github.io/pride/chapter1/">
             <p class="mb-1">
               Chapter I
