--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <a href="https://bdlmh.github.io/pride/">
             Fortune
           </a>
-          by Li Minghui
+          by Li MH
         </li>
         
         <li class="hanging">
@@ -178,7 +178,7 @@
       </a>
       <div class="text-right">
       <small>
-          - Li Minghui (2022-04-21)
+          - Li MH (2022-04-21)
         </small>
       </div>
       <ul class="list-unstyled ml-1 mb-0 border-top border-primary pt-2">
@@ -384,7 +384,7 @@
   <p class="about text-left mb-0">
     </a>
     By 
-    <a href="https://github.com/bdlmh"> Li Minghui</a>.
+    <a href="https://github.com/bdlmh"> Li MH</a>.
     Go
     <a href="https://bdlmh.github.io/photo/"> my photo site</a>.
   </p>
