--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
   <p class="about text-left mb-0">
     </a>
     By 
-    <a href="https://github.com/bdlmh"> Li MH</a>.
+    <a href="https://bdlmh.github.io/"> Li MH</a>.
     Go
-    <a href="https://bdlmh.github.io/photo/"> my photo site</a>.
+    <a href="https://bdlmh.github.io/"> my photo site</a>.
   </p>
 </footer>
 
