--- a/pride/index.html
+++ b/pride/index.html
@@ -73,7 +73,7 @@
           <a href="https://bdlmh.github.io/pride/">
             Fortune
           </a>
-          by Li Minghui
+          by Li MH
         </li>
         
         <li class="hanging">
@@ -118,7 +118,7 @@
         
       </div>
       <div class="bookAuthor p-0 rounded">
-        <h4 class="book-cover m-0 pl-1 pr-1">Li Minghui</h4>
+        <h4 class="book-cover m-0 pl-1 pr-1">Li MH</h4>
       </div>
     </div>
   </div>
@@ -219,7 +219,7 @@
   <p class="about text-left mb-0">
     </a>
     By 
-    <a href="https://github.com/bdlmh"> Li Minghui</a>.
+    <a href="https://github.com/bdlmh"> Li MH</a>.
     Go
     <a href="https://bdlmh.github.io/photo/"> my photo site</a>.
   </p>
