--- a/pride/index.html
+++ b/pride/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
   <meta charset="UTF-8" />
-  <title>HuiBook</title>
+  <title>LiBook</title>
   <meta name="description" content="Some books" />
   <meta name="author" content="Li MH" />
 
