--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <main class="mt-3" style="margin-left: 32px;">
       
   <div class="site-title text-center">
-    <h1>HuiBook</h1>
+    <h1>LiBook</h1>
   </div>
   <div class="d-flex flex-row justify-content-center row">
     
@@ -374,7 +374,7 @@
     <footer class="d-flex flex-row flex-wrap justify-content-between">
   <div class="d-flex flex-column">
     <span class="mb-1">
-      HuiBook
+      LiBook
       &middot;
       (c) <a href="mailto:limh68@mail2.sysu.edu.cn">limh68@mail2.sysu.edu.cn</a>
     </span>
