--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
     By 
     <a href="https://bdlmh.github.io/"> Li MH</a>.
     Go
-    <a href="https://bdlmh.github.io/"> my photo site</a>.
+    <a href="https://bdlmh.github.io/photo/"> my photo site</a>.
   </p>
 </footer>
 
